namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crypto
  labels:
    argocd.argoproj.io/sync-wave: "0"
