crypto_test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crypto-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crypto-test
  template:
    metadata:
      labels:
        app: crypto-test
    spec:
      containers:
      - name: crypto-test
        image: ghcr.io/<username>/crypto-test:latest
        ports:
        - containerPort: 3000
