frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crypto-frontend
  namespace: crypto
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crypto-frontend
  template:
    metadata:
      labels:
        app: crypto-frontend
    spec:
      containers:
        - name: crypto-frontend
          image: ghcr.io/ryan44c8/crypto-test:8547ed0daf862c1153cb46180b6b49fa97db460e
          # Remplace USERNAME par ton compte GHCR
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: crypto-frontend-service
  namespace: crypto
spec:
  selector:
    app: crypto-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
